# dts-stack

./: .env  .env.bak  .env.dts-source  .gitignore  AGENTS.md  README.md  dev-stop.sh  dev-up.sh  docker-compose-app.yml  docker-compose.apps.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.dts-source.yml  docker-compose.legacy.yml  docker-compose.local-dev.yml  docker-compose.local-offline.yml  docker-compose.webapp-pnpm-offline.yml  docker-compose.webapp-pnpm.yml  docker-compose.yml  enable-devtools.sh  encry.sh  imgversion.conf  imgversion.dts-source.conf  init.dts-source.sh  init.sh  local-stop.sh  local-up.sh  merge-worklog.sh  offline-prepare.sh  offline-up.sh  realm-dts.json  start.sh  test.yml  todo.txt  webapp-pnpm-up.sh
builds/: load-offline-bundle.sh  make-offline-bundle.sh  offline_deploy.txt  patch-app-dev-yml.sh  patch-vite-env.sh  webapp.env.development
config/mdm/: mdm-gateway.yml
docs/: apphelp.docx  audit-architecture.md  dts-architecture-2025-11-16.md  openeuler.md  pki-auth.md  rbac-six-roles-test.md  release-2025-11-14.md
docs/implementation/: BI_RLS_GUIDE.md
docs/pki/PKI中间件demo0531/H9Y-pki中间件集成/本地应用集成/Demo/testAgent/: CMakeLists.txt  doctest.h  testCase.hpp
docs/pki/PKI中间件demo0531/H9Y-pki中间件集成/本地应用集成/Demo/testAgent/async/: asynCommon.cpp  asyncEnroll.cpp  asyncEnroll.h
docs/pki/PKI中间件demo0531/H9Y-pki中间件集成/本地应用集成/Demo/testAgent/sync/: synCommon.cpp  synCommon.h  syncDevice.h  syncEnroll.cpp  syncJDAuth.cpp  syncJDAuth.h  syncSignx.cpp  syncSignx.h  syncUnionAuth.cpp  syncUnionAuth.h
docs/release/: 2025-11-17-mdm-sync.md  2025-11-17-pki-common.md
docx/: pki.txt
services/certs/: gen-cert.sh  gen-certs.sh  server.crt  server.key
services/dts-keycloak/: README.md  realm-dts.json  realm-init.json
services/dts-metabase/: README.md  docker-compose.svc.yml  metabase.env
services/dts-superset/: README.md  docker-compose.svc.yml
services/dts-trino/: config.properties
services/koal-vendor/: README.md
source/: Fortifysource.bat  pom.xml
source/dts-admin/: .dockerignore  .yo-rc.json  Dockerfile  Dockerfile.offline  README.md  TestLoad.java  mdmLogPath_IS_UNDEFINED  package.json  pom.xml  sonar-project.properties
source/dts-admin-webapp/: .dockerignore  .env.development  .env.example  .env.production  AGENTS.md  Dockerfile  KEYCLOAK_FEATURES.md  README.md  README.zh-CN.md  biome.json  docker-entrypoint.sh  index.html  lefthook.yml  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
source/dts-bi-analytics-overlay/: README.md
source/dts-bi-dashboard-overlay/: README.md
source/dts-common/: .dockerignore  pom.xml  (+7 more)
tools/: bi-build.sh  netcheck.txt  netfix-checklist.txt  netfix-ops.md  netfix.sh
worklog/: 2025-10-12.md  2025-10-23.md  2025-10-27_audit_v2_refactor.txt  2025-10-29.md  2025-11-16.md  data-lifecycle-test-report-v2.docx  data-lifecycle-test-report-v3.docx  data-lifecycle-test-report-v5.docx  data-lifecycle-test-report.docx  data-security-permission-report-v6.docx  dts-admin  main_todo.md  permissions-matrix.md  test-case.txt  test.sql  todo.txt
(+3027 files in other folders)
